<resources>
    <string name="app_name">Poros Houzz</string>
    <string name="title_activity_navigation_home">NavigationHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">My House</string>
    <string name="menu_slideshow">Save</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_save_fragment">Hello save fragment</string>
    <string name="hello_myhouse_fragment">Hello myhouse fragment</string>
    <string name="hello_user_fragment">Hello user fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bed1">Cozy Bed Emerald</string>
    <string name="bed2">Green Bed Emerald</string>
    <string name="bed3">Yellow Bed Emeralda</string>
    <string name="dp1">Tuscany style</string>
    <string name="dp2">Turkish acany style</string>
    <string name="dp3">American style</string>
    <string name="km1">Light color style</string>
    <string name="km2">European style</string>
    <string name="km3">Asian style tucany</string>
    <string name="liv1">Cozy Emerald Tuscany</string>
    <string name="liv2">Green cozy Emerald</string>
    <string name="liv3">Yellow olive Emeralda</string>
    <string name="kasur1">Cozy Bed Emerald</string>
    <string name="kasur2">Green Bed Emerald</string>
    <string name="kasur3">Yellow Bed Emeralda</string>
    <string name="chair1">Tuscany style</string>
    <string name="chair2">Turkish acany style</string>
    <string name="chair3">American style</string>
    <string name="table1">Light color style</string>
    <string name="table2">European style</string>
    <string name="table3">Asian style tucany</string>
    <string name="lamp1">Cozy Emerald Tuscany</string>
    <string name="lamp2">Green cozy Emerald</string>
    <string name="lamp3">Yellow olive Emeralda</string>
    <string name="acc_created">Account Created :</string>
    <string name="username">Username :</string>
    <string name="longname">Name :</string>
    <string name="logout">Logout</string>
    <string name="rate">Rate the app</string>
    <string name="design_text">DESIGN</string>
    <string name="decoration_text">DECORATION</string>
    <string name="mybedroom_text">My Bedroom</string>
    <string name="mykitchen_text">My Kitchen</string>
    <string name="mylivingroom_text">My Livingroom</string>
    <string name="mybathroom_text">My Bathroom</string>
    <string name="wishlist_button">Cari Jasa Terdekat Sekarang!</string>
    <string name="bed1_desc">
        Elegant and eye-catching, the stunning Black Velvet Luxus King Bed from Meridian Furniture is the perfect addition to any space.
        Overall Dimensions: 110" W x 100.5" D x 55" H
        PATENT PENDING Design
        Soft Black Velvet
        Round Bed
        Deep Button Tufting
        Footboard Height 15.5"
        Footboard Inner Storage Dimensions 55.5"L x 11.5"D x 12.25"H
        Rails Inner Storage Dimensions 78.75"L x 13.5"D x 12.25"H
        Contemporary Design
    </string>
        <string name="bed2_desc">
        The BALI bed not only offers comfort, but also plenty of storage space to keep your personal belongings, decor, clothes and bed linen. This beautiful and functional bed brings an abundance of well distributed compartments. It is smart chic design complemented with elegance from the eco leather handles.
        Memomad furniture …
        .. are designed to fall in love!!
        Our Brazillian furniture projects are a link with the quality, design and functionality.
        Bali Bed …
        The sturdy Bali Platform Bed is all made in solid pine wood and has synthetic leather handles. Includes the bed bases. Thinking about your safety, all edges are rounded
        Comes in Caramel and White Colors and is Available in King, Queen, and Twin sizes
        Insertion mattress depth: 3 inches and the mattress area is . Does not include a mattress
        The bed has 6 six drawers, 4 four shelves, 3 three compartments with doors and also 2 two pullout shelves, that work well as a nightstand, for your favorite frame, reading books, coffee cups, cellphone charger or alarm clock. This piece of furniture optimizes your bedroom space
        High support capacity! Total: 880 lb. Largest compartment: 33 lb/each. Smaller compartment: 11 lb/each. Drawers: 11 lb/each. Pullover shelf: 6,5 lb/each
        Product Description :

        Size :King, Queen, Twin
        Color : Off White
        Material : Menomad
        Width : 76 inches
        Length : 80 inches
    </string>
        <string name="bed3_desc">
        Guerin two-tone bed is an artistic expression in contemporary furniture design. The box shape of the frame has slightly curved side panels and the frame is covered with high quality faux leather. This attractive and charming bed provides both comfort and relaxation. Guerins mix of sleek, comfort and elegant curved design makes this bed a unique contemporary addition to any bedroom. It features wooden frames, chrome legs and is upholstered with durable faux leather.
        Features :

        Finish: White/Gray
        Headboard: 37.75"H x 65.50"W x 5"D
        Material: Faux Leather and Microfiber
        Top of Slat: 10.50" High
        Residential Only
        Futuristic Platform Bed
        White Faux Leather And Gray Fabric Two Tones Upholstery
        Box Spring is not Required

        Specifications
        Product Dimensions : 37.75"H x 65.5"W x 90.88"D
        Product Weight : 109 lbs
        Weight Capacity : 600 lbs
        Leg Dimensions : 2.13" High
    </string>
        <string name="chair1_desc">
        Welcome to the modern lounging essential. Flexible style and luxurious comfort in chic, family-friendly upholstery. Simplified armless lounging sofa is upholstered in soft, durable, stain-resistant Crypton fabric in an invitingly dark charcoal color. Two cushions provide back support while one seat cushion offers sink-in comfort. Match it up with Corner Chair to create a sectional sofa.
        Dimensions: W: 72" D: 40" H: 30"
        Seat Depth is 27.5"
        Constructed from 100% polyester Crypton fabric and maple wood
        Charcoal gray upholstery with an expresso brown frame
        Henry Charcoal color fabric upholstery
        Kiln-dried hardwood frame
        Banak Wood Legs
        Matching Sectional available
        Category: Living Room
        Type: Sofas
        Colors: Henry Charcoal, Espresso
        Materials: 100% Polyester, Banak Wood
        Weight: 100 lb
    </string>
        <string name="chair2_desc">
        MODERN DESIGN : With clean, precise lines, our dining chairs are the ideal modern accessory for your outdoor space. Finished with sleek silver legs and piped stitching, this frame not only offers a chic, minimalistic look but also provides incredible structure.
        BUTTON TUFTED WAFFLE STITCH : The button-tufted stitching in the seating offers an extra touch of sophistication that enhances its contemporary design. The waffle stitch pattern adds a bit of texture without sacrificing any comfort.
        STAINLESS STEEL LEGS : Supported by stainless steel legs, this set of chairs is made to be durable and easy to maintain. The shiny finish of this base accentuates the modern design of the piece.

        DIMENSIONS: 20.00" W x 27.50" D x 35.25" H.
        Includes: Two (2) Dining Chairs
        Material: Corrected Grain Leather
        Frame Material: Stainless Steel
        Color: Black
        Leg Finish: Silver
        Hand-Crafted Details

        Dimensions: 27.50 inches deep x 20.00 inches wide x 32.25 inches high
        Seat Dimensions: 18.75 inches deep x 20.00 inches wide x 18.75 inches high
    </string>
        <string name="chair3_desc">
        Hand assembled plywood lounge chair and ottoman. 100% real italian leather, including piping and buttons. High-elastic soft foam, great resilience and no marks. 7-ply laminated real wood veneer, prevent warping or cracking, security and longevity.
        Cast Aluminum five-star base with 360 degree swivel function, fixed backward tilt of approximately 15 degrees. Rubber Shock Mounts connecting the head and back rest allow for flexibility. The height of the chair is fixed and cannot adjust. It's the same as the original design.

        Chair = L35.4 x W35 x H31.5
        Seat height: 15.7 inches(40CM)
        Ottoman = L27 x W20.9 x H15.7
        Fits perfectly in : sitting room, study room, leisure area, bedroom, office, club, etc.
    </string>
        <string name="lamp1_desc">Light up your living room, bedroom or office with this sleek and modern "Amore" 86" Modern Jet Black 5-Arch LED Floor lamp with dimmer switch . "Amore" is a perfect addition to any room with modern or contemporary decor. The "Amore" floor lamp holds Super bright 2400 Lumens, 40W replacement and warm LED lights with dimming function. The curved design adds a soft note to your decor. Standing over 7 feet, the fixture has a statuesque appearance and draw attention. The Artiva exclusive LED floor lamp allows you to direct the light wherever you need it and provide ample lighting for reading, writing, or creating a spot light in the setting behind the couch, in the corner or in the center of your living room. Heavy weighted base grants perfect balance and prevents the lamp from tipping. Artiva USA exclusive, five true 360-Degree view bulb included.
        Exclusive Five 4.5-Watt (2400 Lumens, 200-Watt replacement) true 360 view filament bulb included
        Adjustable arches (left or right) and adjustable modern shade (up to 90 degree)
        Beautiful Modern Jet Black finish
        Featuring Exclusive LED dimmer switch
        Number of bulbs required: 5
        Bulbs included
        US Patented Design US Patent# US D822, 878 S
    </string>
        <string name="lamp2_desc">
        Clean, Geometric Lines Open The Visual Space Around This Modern Floor Lamp. Staggered Steel Rectangles Finished In Lightly Antiqued Gold Leaf Are Each Accented By A Clear Glass Globe. Three 40W T14, Amber Colored, Antique Style Bulbs Are Included.
        Heirloom Quality - Expertly hand crafted and hand finished. Due to the hand crafted nature of this piece, each piece may have subtle differences.
        Dimensions : 14"L x 8"W x 64"H.
        Weights : 29.5 lbs.
        Material :  Hand Finished Steel and Glass
        UL listed. Uses three max 40 watt Type A bulbs (Three 40W T14, amber colored, antique style bulbs are included.)
    </string>
</resources>